--- a/cup/cup_runtime/BUILD
+++ b/cup/cup_runtime/BUILD
@@ -1,9 +1,11 @@
 licenses(["notice"])  # BSD-like
+
 java_library(
     name = "cup_runtime",
     srcs = glob(["src/main/java/**/*.java"]),
-    visibility=["//visibility:public"],
-    javacopts=[
+    javacopts = [
         # Not our code, there is nothing we can do
-        "-XepDisableAllChecks"],
+        "-XepDisableAllChecks",
+    ],
+    visibility = ["//visibility:public"],
 )
