Be more verbose when there are test errors

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,5 @@
+test --test_output=errors
+
 http://errorprone.info/bugpatterns
 # To avoid bugs in the code
 # P1 Fix the errors and bump from :WARN to :ERROR
