--- a/testsuite/bzltestsuite/BUILD
+++ b/testsuite/bzltestsuite/BUILD
@@ -1,6 +1,14 @@
 package(default_visibility = ["//testsuite:__subpackages__"])
 
-alias(
+java_library(
     name = "bzltestsuite",
-    actual = "//testsuite/bzltestsuite/java/jflex/testing",
+    exports = [
+        "//testsuite/bzltestsuite/java/jflex/testing/annotations",
+        "//testsuite/bzltestsuite/java/jflex/testing",
+    ],
+)
+
+alias(
+    name = "javac",
+    actual = "//testsuite/bzltestsuite/java/jflex/testing/javac",
 )
