Bazel macro jflex_testsuite
Wrapper around java_test to make tests targets more concise.

--- a/testsuite/javatests/jflex/testcase/action_pipe/BUILD
+++ b/testsuite/javatests/jflex/testcase/action_pipe/BUILD
@@ -1,10 +1,8 @@
-java_test(
+load("//testsuite:testsuite.bzl", "jflex_testsuite")
+
+jflex_testsuite(
     name = "ActionPipeTest",
     srcs = ["ActionPipeTest.java"],
-    deps = [
-        "//testsuite/bzltestsuite",
-        "//jflex",
-    ],
     data = [
         "action-pipe.flex",
     ],
