Create MoreAsserts.assertThrows to test that a method thows an exception (like we can do in JUnit 5)

--- a/testsuite/bzltestsuite/java/jflex/testing/BUILD
+++ b/testsuite/bzltestsuite/java/jflex/testing/BUILD
@@ -9,5 +9,6 @@ java_library(
         "//testsuite/bzltestsuite/java/jflex/testing/javac",
         "//third_party/com/google/guava",
         "//third_party/junit",
+        "//testsuite/bzltestsuite/java/jflex/testing/assertion",
     ],
 )
