Minor test javadoc

--- a/testsuite/javatests/jflex/testcase/arr_return/BUILD
+++ b/testsuite/javatests/jflex/testcase/arr_return/BUILD
@@ -2,6 +2,6 @@ load("//testsuite:testsuite.bzl", "jflex_testsuite")
 
 jflex_testsuite(
     name = "ArrReturn",
-    srcs = ["ArrReturn.java"],
+    srcs = ["ArrReturnTest.java"],
     data = ["arr.flex"],
 )
