Add unimplemented @TestSpec attribute expectedLogs

--- a/testsuite/javatests/jflex/testcase/arr_return/BUILD
+++ b/testsuite/javatests/jflex/testcase/arr_return/BUILD
@@ -3,5 +3,5 @@ load("//testsuite:testsuite.bzl", "jflex_testsuite")
 jflex_testsuite(
     name = "ArrReturn",
     srcs = ["ArrReturnTest.java"],
-    data = ["arr.flex"],
+    data = ["arr.flex", "arr-flex.output"],
 )
