--- a/testsuite/javatests/jflex/testcase/arr_return/BUILD
+++ b/testsuite/javatests/jflex/testcase/arr_return/BUILD
@@ -1,7 +1,7 @@
 load("//testsuite:testsuite.bzl", "jflex_testsuite")
 
 jflex_testsuite(
-    name = "ArrReturn",
+    name = "ArrReturnTest",
     srcs = ["ArrReturnTest.java"],
     data = ["arr.flex"],
 )
