Add documentation about the bazel testcases (#493)
* Add javadoc on test cases

* Add migration status

* Rename ArrReturn to ArrReturnTest

--- a/testsuite/javatests/jflex/testcase/arr_return/BUILD
+++ b/testsuite/javatests/jflex/testcase/arr_return/BUILD
@@ -1,7 +1,7 @@
 load("//testsuite:testsuite.bzl", "jflex_testsuite")
 
 jflex_testsuite(
-    name = "ArrReturn",
-    srcs = ["ArrReturn.java"],
+    name = "ArrReturnTest",
+    srcs = ["ArrReturnTest.java"],
     data = ["arr.flex"],
 )
