--- a/jflex/src/main/java/jflex/BUILD
+++ b/jflex/src/main/java/jflex/BUILD
@@ -14,6 +14,7 @@ java_library(
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/io",
         "//jflex/src/main/java/jflex/performance",
+        "//third_party/com/google/auto_value",
     ],
 )
 
