--- a/scripts/degraph/dep-graph.cfg
+++ b/scripts/degraph/dep-graph.cfg
@@ -18,8 +18,10 @@ packages = {
   org.apache.(*).**
   org.(*).**
   (java_cup).**
-  (jflex.*).**
+  jflex jflex.*
+  jflex.(*).**
 }
+
 internalExternal = {
   internal jflex.**
   external **
