--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -5,7 +5,7 @@ load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
 package_group(
     name = "visibility",
-    packages = ["//jflex/..."],
+    packages = ["//jflex/...", "//testsuite/..."],
 )
 
 java_binary(
