--- a/jflex/src/main/java/jflex/gui/BUILD
+++ b/jflex/src/main/java/jflex/gui/BUILD
@@ -3,5 +3,8 @@ package(default_visibility = ["//jflex:visibility"])
 java_library(
     name = "gui",
     srcs = glob(["*.java"]),
-    deps = ["//jflex"],
+    deps = [
+        "//jflex",
+        "//jflex/src/main/java/jflex/exceptions",
+    ],
 )
