Show pacakges in dep-graph

--- a/scripts/degraph/dep-graph.cfg
+++ b/scripts/degraph/dep-graph.cfg
@@ -1,8 +1,8 @@
 # Configuration for degraph http://blog.schauderhaft.de/degraph/
 
 # Prerequisite:
-# bazel build //jflex
-classpath = bazel-bin/jflex/libjflex.jar
+# bazel build //jflex:jflex_bin_deploy.jar
+classpath = bazel-bin/jflex/jflex_bin_deploy.jar
 output = /tmp/jflex-packages.graphml
 
 # Include all of JFlex
