Also test google-java-format in cirrus

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,11 @@
 # Copyright 2018 Google LLC.
 # SPDX-License-Identifier: Apache-2.0
 
-container:
-  image: cirrusci/bazel:latest
-task:
+
+build_task:
   name: Bazel build and test
+  container:
+    image: cirrusci/bazel:latest
   check_script:
   - bazel --bazelrc=.ci.bazelrc info  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  release
   build_script:
@@ -17,3 +18,9 @@ task:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //testsuite/...
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
+codestyle_task:
+  name: Check code style
+  container:
+    image: openjdk:8-jdk
+  script: scripts/test-java-format.sh
+
