--- a/jflex/src/main/java/jflex/anttask/BUILD
+++ b/jflex/src/main/java/jflex/anttask/BUILD
@@ -4,8 +4,8 @@ java_library(
     name = "anttask",
     srcs = glob(["*.java"]),
     deps = [
-        "//jflex",
         "//jflex/src/main/java/jflex/exceptions",
+        "//jflex/src/main/java/jflex/generator",
         "//third_party/org/apache/ant",
     ],
 )
