--- a/testsuite/bzltestsuite/java/jflex/testing/BUILD
+++ b/testsuite/bzltestsuite/java/jflex/testing/BUILD
@@ -4,9 +4,9 @@ java_library(
     name = "testing",
     srcs = glob(["*.java"]),
     deps = [
-        "//jflex",
         "//testsuite/bzltestsuite/java/jflex/testing/annotations",
         "//testsuite/bzltestsuite/java/jflex/testing/javac",
+        "//jflex/src/main/java/jflex/generator",
         "//third_party/com/google/guava",
         "//third_party/junit",
         "//testsuite/bzltestsuite/java/jflex/testing/assertion",
