Cleaner API between lexer and emitter
Let's see if the regression tests pass!

--- a/jflex/src/main/java/jflex/generator/BUILD
+++ b/jflex/src/main/java/jflex/generator/BUILD
@@ -8,6 +8,7 @@ java_library(
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/io",
+        "//jflex/src/main/java/jflex/l10n",
         "//jflex/src/main/java/jflex/performance",
     ],
 )
