--- a/jflex/src/main/java/jflex/BUILD
+++ b/jflex/src/main/java/jflex/BUILD
@@ -6,8 +6,10 @@ java_library(
     srcs = ["Main.java"],  # cli
     deps = [
         "//jflex/src/main/java/jflex/anttask",
+        "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
+        "//jflex/src/main/java/jflex/generator",
         "//jflex/src/main/java/jflex/gui",
         "//jflex/src/main/java/jflex/l10n",
     ],
