--- a/jflex/src/main/java/jflex/anttask/BUILD
+++ b/jflex/src/main/java/jflex/anttask/BUILD
@@ -4,6 +4,7 @@ java_library(
     name = "anttask",
     srcs = glob(["*.java"]),
     deps = [
+        "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/generator",
         "//third_party/org/apache/ant",
