Move Jflex version in jflex.base.Build

--- a/jflex/src/main/java/jflex/BUILD
+++ b/jflex/src/main/java/jflex/BUILD
@@ -6,6 +6,7 @@ java_library(
     srcs = ["Main.java"],  # cli
     deps = [
         "//jflex/src/main/java/jflex/anttask",
+        "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/gui",
