--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -8,6 +8,7 @@ java_library(
     ],
     deps = [
         "//cup:cup_runtime",
+        "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/io",
