Add required deps on JFlexMojoTest.
Now the test runs but fails to load files:
5) testRecursion(jflex.maven.plugin.jflex.JFlexMojoTest)
java.io.IOException: Stream closed
	at java.io.BufferedInputStream.getInIfOpen(BufferedInputStream.java:159)
	at java.io.BufferedInputStream.fill(BufferedInputStream.java:246)
	at java.io.BufferedInputStream.read(BufferedInputStream.java:265)
	at org.apache.commons.io.input.BOMInputStream.getBOM(BOMInputStream.java:220)
	at org.apache.commons.io.input.BOMInputStream.getBOMCharsetName(BOMInputStream.java:250)
	at org.apache.commons.io.input.XmlStreamReader.doRawStream(XmlStreamReader.java:426)
	at org.apache.commons.io.input.XmlStreamReader.<init>(XmlStreamReader.java:220)
	at org.apache.commons.io.input.XmlStreamReader.<init>(XmlStreamReader.java:184)
	at org.apache.commons.io.input.XmlStreamReader.<init>(XmlStreamReader.java:153)
	at org.apache.maven.plugin.testing.AbstractMojoTestCase.setUp(AbstractMojoTestCase.java:156)
	at org.apache.maven.plugin.testing.MojoRule$2.evaluate(MojoRule.java:304)
	at org.junit.rules.TestWatcher$1.evaluate(TestWatcher.java:55)
	at org.junit.rules.RunRules.evaluate(RunRules.java:20)

--- a/jflex-maven-plugin/src/test/java/jflex/maven/plugin/jflex/BUILD
+++ b/jflex-maven-plugin/src/test/java/jflex/maven/plugin/jflex/BUILD
@@ -14,7 +14,11 @@ java_test(
         "//jflex-maven-plugin/src/main/java/jflex/maven/plugin/jflex",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
-        "@org_apache_maven_plugin_testing_maven_plugin_testing_harness//jar",
+        # maven_core (which injects Sisu PlexusContainer) must be called *before* testing_harness
+        # Otherwise injection will fail with:
+        # NoSuchMethodError: org.codehaus.plexus.DefaultPlexusContainer.<init>
+        "//third_party/jvm/org/apache/maven:maven_core",
+        "//third_party/jvm/org/apache/maven/plugin_testing:maven_plugin_testing_harness",
     ],
 )
 
