Add empty META-INF as resources

--- a/jflex-maven-plugin/src/main/java/jflex/maven/plugin/jflex/BUILD
+++ b/jflex-maven-plugin/src/main/java/jflex/maven/plugin/jflex/BUILD
@@ -1,11 +1,15 @@
 java_library(
     name = "jflex",
     srcs = glob(["*.java"]),
+    visibility = ["//jflex-maven-plugin/src/test:__subpackages__"],
     deps = [
         "//jflex",
-        "@jsr305//jar",
         "//third_party/com/google/guava",
         "//third_party/org/apache/maven:maven_plugin_api",
+        "@jsr305//jar",
     ],
-    visibility = ["//jflex-maven-plugin/src/test:__subpackages__"],
+    resources=[
+        "//jflex-maven-plugin/java:meta_inf",
+
+    ]
 )
