Add META-INF generated by Maven.
Now fails with
There were 5 failures:
              1) testSingleDir(jflex.maven.plugin.jflex.JFlexMojoTest)
              org.codehaus.plexus.component.repository.exception.ComponentLookupException: java.util.NoSuchElementException
                    role: org.apache.maven.repository.RepositorySystem
                roleHint:
              	at org.codehaus.plexus.DefaultPlexusContainer.lookup(DefaultPlexusContainer.java:267)
              	at org.codehaus.plexus.DefaultPlexusContainer.lookup(DefaultPlexusContainer.java:255)
              	at org.codehaus.plexus.DefaultPlexusContainer.lookup(DefaultPlexusContainer.java:249)
              	at org.codehaus.plexus.PlexusTestCase.lookup(PlexusTestCase.java:211)
              	at org.apache.maven.plugin.testing.AbstractMojoTestCase.setUp(AbstractMojoTestCase.java:163)

--- a/jflex-maven-plugin/java/BUILD
+++ b/jflex-maven-plugin/java/BUILD
@@ -1,5 +1,11 @@
 filegroup(
     name = "meta_inf",
-    srcs = glob(["META-INF/**"]),
+    srcs = glob(["META-INF/**"]) + [":copy_pom"],
     visibility = ["//jflex-maven-plugin/src/main/java/jflex/maven/plugin/jflex:__pkg__"],
+)
+genrule(
+    name="copy_pom",
+    cmd = "cp $< $@",
+    outs = ["META-INF/maven/de.jflex/jflex-maven-plugin/pom.xml"],
+    srcs = ["//jflex-maven-plugin:pom.xml"]
 )
