Move ucd_parser in Java

--- a/java/ucd_generator/BUILD
+++ b/java/ucd_generator/BUILD
@@ -1,12 +1,12 @@
 SRCS_MAIN = ["Main.java"]
 
 java_library(
-    name = "ucd_parser",
+    name = "ucd_generator",
     srcs = glob(["*.java"], exclude = SRCS_MAIN),
 )
 
 java_binary(
     name = "ucd_parser_bin",
     srcs = SRCS_MAIN,
-    deps = [":ucd_parser"],
+    deps = [":ucd_generator"],
 )
