--- a/java/ucd_generator/BUILD
+++ b/java/ucd_generator/BUILD
@@ -2,11 +2,22 @@ SRCS_MAIN = ["Main.java"]
 
 java_library(
     name = "ucd_generator",
-    srcs = glob(["*.java"], exclude = SRCS_MAIN),
+    srcs = glob(
+        ["*.java"],
+        exclude = SRCS_MAIN,
+    ),
 )
 
 java_binary(
-    name = "ucd_parser_bin",
+    name = "Main",
     srcs = SRCS_MAIN,
     deps = [":ucd_generator"],
+)
+
+genrule(
+    name = "gen_unicode_properties",
+    srcs = ["//third_party/unicode:ucd_1"],
+    outs = ["logs.txt"],
+    cmd = "$(location :Main) $< > $@",
+    tools = [":Main"],
 )
