Pass the input UCD to main()

--- a/java/ucd_generator/BUILD
+++ b/java/ucd_generator/BUILD
@@ -11,13 +11,16 @@ java_library(
 java_binary(
     name = "Main",
     srcs = SRCS_MAIN,
-    deps = [":ucd_generator"],
+    deps = [
+        ":ucd_generator",
+        "//third_party/com/google/guava",
+    ],
 )
 
 genrule(
     name = "gen_unicode_properties",
     srcs = ["//third_party/unicode:ucd_1"],
     outs = ["logs.txt"],
-    cmd = "$(location :Main) $< > $@",
+    cmd = "$(location :Main) 1=$(location //third_party/unicode:ucd_1) > $@",
     tools = [":Main"],
 )
