--- a/jflex-unicode-maven-plugin/src/main/java/jflex/maven/plugin/unicode/BUILD
+++ b/jflex-unicode-maven-plugin/src/main/java/jflex/maven/plugin/unicode/BUILD
@@ -4,4 +4,5 @@ java_library(
         ["*.java"],
         exclude = ["*Mojo.java"],
     ) + ["//jflex-unicode-maven-plugin/src/main/jflex:gen_ucd_scanners"],
+    visibility = ["//java/ucd_generator:__pkg__"],
 )
