--- a/java/jflex/testing/testsuite/annotations/BUILD
+++ b/java/jflex/testing/testsuite/annotations/BUILD
@@ -1,9 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
 java_library(
-    name = "base",
+    name = "annotations",
+    testonly = True,
     srcs = glob(["*.java"]),
-    deps = [
-        "//third_party/com/google/auto_value",
-    ],
 )
