Emitter integration tests working (and failing)

--- a/java/jflex/ucd_generator/BUILD
+++ b/java/jflex/ucd_generator/BUILD
@@ -1,3 +1,5 @@
+package(default_visibility=["//javatests/jflex/ucd_generator:__subpackages__"])
+
 SRCS_MAIN = ["Main.java"]
 
 java_library(
@@ -10,6 +12,7 @@ java_library(
         "UnicodeProperties.java.vm",
     ],
     deps = [
+        "//java/jflex/testing/javac",
         "//java/jflex/velocity:velocity",
         "//third_party/com/google/guava",
         "//third_party/org/apache/velocity",
