Use my own golden file

--- a/javatests/jflex/ucd_generator/BUILD
+++ b/javatests/jflex/ucd_generator/BUILD
@@ -8,6 +8,6 @@ java_test(
         "//third_party/com/google/truth",
     ],
     data = [
-        "//jflex/src/main/java/jflex/core:unicode/UnicodeProperties.java"
+        "UnicodeProperties.java.golden",
     ]
 )
