Output directly to System.out
Otherwise the build rule would have ot pass the working directory in cli

--- a/java/jflex/ucd_generator/BUILD
+++ b/java/jflex/ucd_generator/BUILD
@@ -31,7 +31,7 @@ java_binary(
 genrule(
     name = "gen_unicode_properties",
     srcs = ["//third_party/unicode:ucd_9"],
-    outs = ["logs.txt"],
-    cmd = "$(location :Main) --version=9 $(locations //third_party/unicode:ucd_9) > $@",
+    outs = ["UnicodeProperties.java"],
+    cmd = "$(location :Main) --version=9.0 $(locations //third_party/unicode:ucd_9) > $@",
     tools = [":Main"],
 )
