--- a/javatests/jflex/velocity/BUILD
+++ b/javatests/jflex/velocity/BUILD
@@ -3,16 +3,17 @@ java_test(
     srcs = ["TemplateVarsTest.java"],
     deps = [
         "//java/jflex/testing/assertion",
-        "//java/jflex/velocity:velocity",
+        "//java/jflex/velocity",
         "//third_party/com/google/truth",
         "//third_party/org/apache/velocity",
     ],
 )
+
 java_test(
     name = "VelocityTest",
     srcs = ["VelocityTest.java"],
     deps = [
-        "//java/jflex/velocity:velocity",
+        "//java/jflex/velocity",
         "//third_party/com/google/truth",
         "//third_party/org/apache/velocity",
     ],
