Revert "Use \input"
This reverts commit 407732212fdda9957e3284dee41dba302bdb231e.

The input diesn't exist. It should use $(location instead)

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -38,7 +38,6 @@ pandoc(
 latex_document(
     name = "manual",
     srcs = [
-        ":manual_tex",
         "@bazel_latex//packages:graphicx",
         "@bazel_latex//packages:hyperref",
         "@bazel_latex//packages:microtype",
@@ -46,8 +45,19 @@ latex_document(
     main = "manual_full.tex",
 )
 
+genrule(
+    name = "manual_full_tex",
+    srcs = [
+        "manual_start.tex",
+        ":latex_content",
+        "manual_end.tex",
+    ],
+    outs = ["manual_full.tex"],
+    cmd = GENRULE_CONCATENATE,
+)
+
 pandoc(
-    name = "manual_tex",
+    name = "latex_content",
     src = ":manual_md",
     from_format = "markdown",
     output = "content.tex",  # If changed, then change \include{} in manual.tex
@@ -58,6 +68,7 @@ replace_placeholders(
     name = "manual_md",
     src = ":concatenated_manual",
 )
+
 
 # Concatenates all pages in a single document.
 genrule(
