Revert local bazel_latex

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -41,7 +41,7 @@ latex_document(
         "@bazel_latex//packages:graphicx",
         "@bazel_latex//packages:hyperref",
         "@bazel_latex//packages:microtype",
-        "@bazel_latex//packages:upquote",
+        # "@bazel_latex//packages:upquote",
     ],
     main = "manual_full.tex",
 )
