--- a/docs/BUILD
+++ b/docs/BUILD
@@ -2,23 +2,27 @@
 
 load("@bazel_pandoc//:pandoc.bzl", "pandoc")
 load("@bazel_latex//:latex.bzl", "latex_document")
-load(":docs.bzl", "replace_placeholders")
+load(":docs.bzl", "jflex_doc_tex", "replace_placeholders")
 
 GENRULE_CONCATENATE = "cat $(SRCS) > $@"
 
-MD_SRCS = [
-    "md/head.md",
-    "md/intro.md",
-    "md/installing.md",
-    "md/maven-plugin.md",
-    "md/ant-task.md",
-    "md/example.md",
-    "md/lex-specs.md",
-    "md/encodings.md",
-    "md/performance.md",
-    "md/porting-and-parsers.md",
-    "md/end.md",
+# Changeinput statements if you add a section
+DOC_SECTIONS = [
+    "intro",
+    "installing",
+    "maven-plugin",
+    "ant-task",
+    "example",
+    "lex-specs",
+    "encodings",
+    "performance",
+    "porting-and-parsers",
+    "end",
 ]
+
+MD_SRCS = ["md/head.md"] + ["md/" + src + ".md" for src in DOC_SECTIONS]
+
+TEX_SRCS = [":" + section + "_tex" for section in DOC_SECTIONS]
 
 pandoc(
     name = "html",
@@ -35,27 +39,6 @@ pandoc(
     to_format = "html",
 )
 
-latex_document(
-    name = "manual",
-    srcs = [
-        ":fig/jflex-black.png",
-        ":manual_tex",
-        "@bazel_latex//packages:graphicx",
-        "@bazel_latex//packages:hyperref",
-        "@bazel_latex//packages:microtype",
-        # "@bazel_latex//packages:upquote",
-    ],
-    main = "manual_full.tex",
-)
-
-pandoc(
-    name = "manual_tex",
-    src = ":manual_md",
-    from_format = "markdown",
-    output = "content.tex",  # If changed, then change \include{} in manual.tex
-    to_format = "latex",
-)
-
 replace_placeholders(
     name = "manual_md",
     src = ":concatenated_manual",
@@ -67,4 +50,26 @@ genrule(
     srcs = MD_SRCS,
     outs = ["concatenated_manual.md"],
     cmd = GENRULE_CONCATENATE,
+)
+
+latex_document(
+    name = "manual",
+    srcs = [
+        ":fig/jflex-black.png",
+        "@bazel_latex//packages:graphicx",
+        "@bazel_latex//packages:hyperref",
+        "@bazel_latex//packages:microtype",
+        # "@bazel_latex//packages:upquote",
+    ] + TEX_SRCS,
+    main = "manual_full.tex",
+)
+
+# Generates :section_tex (with substituted variables)
+[jflex_doc_tex(name = section) for section in DOC_SECTIONS]
+
+genrule(
+    name = "latex_content",
+    outs = ["_content.tex"],
+    srcs = TEX_SRCS,
+    cmd = "echo " + ("".join(["\input{docs/" + section + "}" for section in DOC_SECTIONS])) + " > $@",
 )
