Create module jflex.generator (#501)
* Create package jflex.generator
  * Move LexScaner
  * Move PackEmitter

* Cleaner API between lexer and emitter

--- a/java/jflex/testing/testsuite/BUILD
+++ b/java/jflex/testing/testsuite/BUILD
@@ -12,6 +12,7 @@ java_library(
         "//java/jflex/testing/javac",
         "//java/jflex/testing/testsuite/annotations",
         "//jflex",
+        "//jflex/src/main/java/jflex/generator",
         "//third_party/com/google/guava",
         "//third_party/junit",
     ],
