--- a/jflex/src/main/java/jflex/generator/BUILD
+++ b/jflex/src/main/java/jflex/generator/BUILD
@@ -1,13 +1,14 @@
 package(default_visibility = ["//jflex:visibility"])
 
 java_library(
-    name = "gui",
+    name = "generator",
     srcs = glob(["*.java"]),
     deps = [
         "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
-        "//jflex/src/main/java/jflex/generator",
+        "//jflex/src/main/java/jflex/io",
         "//jflex/src/main/java/jflex/l10n",
+        "//jflex/src/main/java/jflex/performance",
     ],
 )
