Update the test

--- a/javatests/jflex/testcase/action_pipe/BUILD
+++ b/javatests/jflex/testcase/action_pipe/BUILD
@@ -1,10 +1,19 @@
 load("//testsuite:testsuite.bzl", "jflex_testsuite")
 
 jflex_testsuite(
-    name = "ActionPipeTest",
-    srcs = ["ActionPipeTest.java"],
+    name = "ActionPipeEofTest",
+    srcs = ["ActionPipeEofTest.java"],
     data = [
-        "action-pipe.flex",
+        "action-pipe-eof.flex",
+    ],
+    deps = ["//jflex/src/main/java/jflex/exceptions"],
+)
+
+jflex_testsuite(
+    name = "EofPipeActionTest",
+    srcs = ["EofPipeActionTest.java"],
+    data = [
+        "eof-pipe-action.flex",
     ],
     deps = ["//jflex/src/main/java/jflex/exceptions"],
 )
