--- a/jflex-maven-plugin/src/main/java/jflex/maven/plugin/jflex/BUILD
+++ b/jflex-maven-plugin/src/main/java/jflex/maven/plugin/jflex/BUILD
@@ -4,6 +4,7 @@ java_library(
     visibility = ["//jflex-maven-plugin/src/test:__subpackages__"],
     deps = [
         "//jflex",
+        "//jflex/src/main/java/jflex/generator",
         "//third_party/com/google/guava",
         "//third_party/org/apache/maven:maven_plugin_api",
         "@jsr305//jar",
