Add dep on wagon
Fix java.lang.NoClassDefFoundError: org/apache/maven/wagon/TransferFailedException
    	at java.lang.Class.getDeclaredConstructors0(Native Method)
    	at java.lang.Class.privateGetDeclaredConstructors(Class.java:2671)
    	at java.lang.Class.getDeclaredConstructors(Class.java:2020)
    	at com.google.inject.spi.InjectionPoint.forConstructorOf(InjectionPoint.java:245)

--- a/jflex-maven-plugin/dependencies.yml
+++ b/jflex-maven-plugin/dependencies.yml
@@ -18,3 +18,7 @@ dependencies:
     maven-compat:
       version:                     3.5.2
       lang:                        java
+  org.apache.maven.wagon:
+    wagon-provider-api:
+      version:                     3.2.0
+      lang:                        java
