--- a/javatests/jflex/ucd_generator/emitter/unicode_version/BUILD
+++ b/javatests/jflex/ucd_generator/emitter/unicode_version/BUILD
@@ -2,6 +2,10 @@ java_test(
     name = "UnicodeVersionEmitterTest",
     srcs = ["UnicodeVersionEmitterTest.java"],
     deps = [
+        "//java/jflex/testing/diff",
         "//java/jflex/ucd_generator/emitter/unicode_version",
+        "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/truth",
     ],
+    data = ["Unicode_0_1.java.golden"],
 )
