--- a/java/jflex/ucd_generator/BUILD
+++ b/java/jflex/ucd_generator/BUILD
@@ -50,7 +50,28 @@ genrule(
         "//third_party/unicode:ucd_9",
         "//third_party/unicode:ucd_10",
     ],
-    outs = ["UnicodeProperties.java"],
+    outs = [
+        "UnicodeProperties.java",
+        "Unicode_1_1.java",
+        "Unicode_2_0.java",
+        "Unicode_2_1.java",
+        "Unicode_3_0.java",
+        "Unicode_3_1.java",
+        "Unicode_3_2.java",
+        "Unicode_4_0.java",
+        "Unicode_4_1.java",
+        "Unicode_5_0.java",
+        "Unicode_5_1.java",
+        "Unicode_5_2.java",
+        "Unicode_6_0.java",
+        "Unicode_6_1.java",
+        "Unicode_6_2.java",
+        "Unicode_6_3.java",
+        "Unicode_7_0.java",
+        "Unicode_8_0.java",
+        "Unicode_9_0.java",
+        "Unicode_10_0.java",
+    ],
     cmd = "$(location :Main)" +
           " --version=1.1.5 $(locations //third_party/unicode:ucd_1_1_5)" +
           " --version=2.0.14 $(locations //third_party/unicode:ucd_2_0_14)" +
