Add test for Version.java

--- a/javatests/jflex/ucd_generator/ucd/BUILD
+++ b/javatests/jflex/ucd_generator/ucd/BUILD
@@ -6,3 +6,12 @@ java_test(
         "//third_party/com/google/truth",
     ],
 )
+
+java_test(
+    name = "VersionTest",
+    srcs = ["VersionTest.java"],
+    deps = [
+        "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/truth",
+    ],
+)
